--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -11,8 +11,10 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal">Skystore</h5>
     <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
+        <a class="p-2 btn btn-outline-primary" href="/product_list/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
+        <a class="p-2 btn btn-outline-primary" href="/blog/blog_list/">Блоги</a>
+        <a class="p-2 btn btn-outline-primary" href="/">Главная</a>
     </nav>
 </div>
 
@@ -62,7 +64,7 @@
             <div class="col-6 col-md">
                 <h5>Дополнительно</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Мы пишем</a></li>
+                    <li><a class="text-muted" href="https://sky.pro/">Мы пишем</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
@@ -75,9 +77,5 @@
     </footer>
 </div>
 <!-- Подключите статичеcкие файлы со скриптами Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"
-</script>
 </body>
 </html>
