--- a/catalog/templates/catalog/product_confirm_delete.html
+++ b/catalog/templates/catalog/product_confirm_delete.html
@@ -1,19 +1,9 @@
-{% extends 'catalog/base.html'%}
+{% extends 'catalog/base.html' %}
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-6">
-            <form class="row" method="post" enctype="multipart/form-data">
-                <div class="card">
-                    <p class="card-text">Действительно хотите удалить{{ object.name | lower }}</p>
-                    <div class="card-body">
-                        {% csrf_token %}
-                    </div>
-                    <button type="submit" class="btn btn-primary">Удалить</button>
-                    <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Отменить</a>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>>
+<h1>Вы уверены, что хотите удалить этот продукт?</h1>
+<form method="post">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">Удалить</button>
+    <a href="{% url 'catalog:product_list' %}" class="btn btn-secondary">Отмена</a>
+</form>
 {% endblock %}
