--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,24 +1,13 @@
-{% extends 'catalog/base.html'%}
+<!-- catalog/templates/catalog/product_form.html -->
+{% extends 'catalog/base.html' %}
+
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-6">
-            <form class="row" method="post" enctype="multipart/form-data">
-                <div class="card">
-                    <div class="card-body">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                    </div>
-                    <button type="submit" class="btn btn-primary">
-                        {% if object %}
-                        Сохранить
-                        {% else %}
-                        Создать
-                        {% endif %}
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>>
+    <h2 class="my-4">Добавить продукт</h2>
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form.as_p }}  <!-- Выводим форму -->
+        <button type="submit" class="btn btn-primary">Отправить</button>
+    </form>
+</div>
 {% endblock %}
