--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -5,9 +5,10 @@
 <!-- Центрированная кнопка "Добавить продукт" -->
 <div class="text-center mb-4">
     {% if user.is_authenticated %}
-        <a href="{% url 'catalog:product_create' %}" class="btn btn-primary">Добавить продукт</a>
+    <a href="{% url 'catalog:product_create' %}" class="btn btn-primary">Добавить продукт</a>
     {% endif %}
 </div>
+
 
 <!-- Контейнер для карточек продуктов с выравниванием по центру -->
 <div class="container">
@@ -22,10 +23,11 @@
                     <h5 class="card-title">{{ product.name }}</h5>
                     <p class="card-text">{{ product.description|truncatewords:20 }}</p>
                     <a href="{% url 'catalog:product_detail' product.pk %}" class="btn btn-info">Перейти</a>
-                    {% if user.is_authenticated %}
-                        <a href="{% url 'catalog:product_update' product.pk %}" class="btn btn-info">Редактировать</a>
-                        <a href="{% url 'catalog:product_delete' product.pk %}" class="btn btn-danger">Удалить</a>
+                    {% if perms.catalog.can_edit_product and perms.catalog.can_edit_description == catalog.owner %}
+                    <a href="{% url 'catalog:product_update' product.pk %}" class="btn btn-info">Редактировать</a>
+                    <a href="{% url 'catalog:product_delete' product.pk %}" class="btn btn-danger">Удалить</a>
                     {% endif %}
+
                 </div>
             </div>
         </div>
