--- a/catalog/templates/products_list.html
+++ b/catalog/templates/products_list.html
@@ -1,15 +1,17 @@
-{%extends 'base.html'%}
+{% extends 'base.html' %}
 {% load tags_my %}
-{%block content%}
+
+{% block content %}
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
+        <h1>Продукты в категории: {{ category|default:"Все продукты" }}</h1>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            {%for product in products%}
+            {% for product in products %}
             <div class="col">
                 <div class="card shadow-sm">
-                    <img src="{{product.image | media_filter}}">
+                    <img src="{{ product.image | media_filter }}">
                     <div class="card-body">
-                        <p class="card-text">{{product.name}}</p>
+                        <p class="card-text">{{ product.name }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}"
@@ -20,8 +22,10 @@
                     </div>
                 </div>
             </div>
+            {% empty %}
+            <p>В этой категории нет продуктов.</p>
             {% endfor %}
         </div>
     </div>
 </div>
-{%endblock%}
+{% endblock %}
